--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#2196F3</color>
+    <color name="button">#CDD1A9</color>
+    <color name="kahverengi">#755842</color>
+    <color name="appBar">#F9B888</color>
+
 </resources>
