--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2196F3</color>
     <color name="button">#CDD1A9</color>
-    <color name="kahverengi">#755842</color>
+    <color name="kahverengi">#0A7373</color>
     <color name="appBar">#F9B888</color>
 
 </resources>
