--- a/app/src/main/res/navigation/login_graph.xml
+++ b/app/src/main/res/navigation/login_graph.xml
@@ -14,6 +14,9 @@
             android:id="@+id/action_signInFragment_to_logInFragment"
             app:destination="@id/logInFragment"
             app:enterAnim="@android:anim/slide_out_right" />
+        <action
+            android:id="@+id/action_signInFragment_to_verificationFragment"
+            app:destination="@id/verificationFragment" />
     </fragment>
     <fragment
         android:id="@+id/logInFragment"
@@ -24,5 +27,14 @@
             android:id="@+id/action_logInFragment_to_signInFragment"
             app:destination="@id/signInFragment"
             app:enterAnim="@android:anim/slide_in_left" />
+    </fragment>
+    <fragment
+        android:id="@+id/verificationFragment"
+        android:name="com.example.coursegradetracking.VerificationFragment"
+        android:label="fragment_verification"
+        tools:layout="@layout/fragment_verification" >
+        <action
+            android:id="@+id/action_verificationFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
     </fragment>
 </navigation>
