--- a/app/src/main/res/layout/fragment_main_courses.xml
+++ b/app/src/main/res/layout/fragment_main_courses.xml
@@ -33,9 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:text="GENEL ORTALAMA: "
-        android:textSize="14sp"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
